src/test/ui/regions/regions-ret-borrowed-1.stderr
error: lifetime may not live long enough
  --> $DIR/regions-ret-borrowed-1.rs:10:14
   |
LL |     with(|o| o)
   |           -- ^ returning this value requires that `'1` must outlive `'2`
   |           ||
   |           |return type of closure is &'2 isize
   |           has type `&'1 isize`

error: aborting due to previous error

